--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Work Day Scheduler</title>
 
     <link
@@ -48,6 +49,7 @@
         </form>
       </section>
     </main>
-    <script src="./xx.js"></script>
+    <script src="./moment.js"></script>
+    <script src="./wd-schedule.js"></script>
   </body>
 </html>
