Updated with dynamic rendering of scheduler panel

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <main class="container">
       <section>
-        <form>
+        <!--<form>
           <div class="form-group div-schd-form-grp">
             <div class="row">
               <div class="col-md-2 div-schd-col">
@@ -38,15 +38,15 @@
                 ></textarea>
               </div>
               <div class="col-md-1 div-schd-col">
-                <button class="btn btn-primary btn-save" id="btn-gen-pwd">
+                <button class="btn btn-primary btn-save">
                   save
                 </button>
                 <div class="col-md-1"></div>
               </div>
             </div>
-            <!--<hr size="15" class="hr-table" />-->
-          </div>
-        </form>
+            <hr size="15" class="hr-table" />-->
+         <!-- </div>
+        </form> -->
       </section>
     </main>
     <script src="./moment.js"></script>
