--- a/index.html
+++ b/index.html
@@ -21,33 +21,7 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <main class="container">
-      <section>
-        <!--<form>
-          <div class="form-group div-schd-form-grp">
-            <div class="row">
-              <div class="col-md-2 div-schd-col">
-                <hr size="15" class="hr-table" />
-                <label class="float-right"><h3>12 PM</h3></label>
-              </div>
-              <div class="col-md-9 div-schd-col">
-                <hr size="15" class="hr-table" />
-                <textarea
-                  class="form-control ta-border ta-padng-prsnt"
-                  rows="2"
-                  time-slot="12-1-pm"
-                ></textarea>
-              </div>
-              <div class="col-md-1 div-schd-col">
-                <button class="btn btn-primary btn-save">
-                  save
-                </button>
-                <div class="col-md-1"></div>
-              </div>
-            </div>
-            <hr size="15" class="hr-table" />-->
-         <!-- </div>
-        </form> -->
-      </section>
+      <section></section>
     </main>
     <script src="./moment.js"></script>
     <script src="./wd-schedule.js"></script>
